--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>Chapter5</module>
         <module>Chapter6</module>
+        <module>Chapter9</module>
     </modules>
 
 </project>
