--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
         <module>Chapter5</module>
         <module>Chapter6</module>
         <module>Chapter9</module>
+        <module>Chapter10</module>
     </modules>
+
+    <dependencies>
+
+    </dependencies>
+
 
 </project>
