--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>Chapter6</module>
         <module>Chapter9</module>
         <module>Chapter10</module>
+        <module>Chapter11</module>
     </modules>
 
     <dependencies>
